# specterdefence

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.marketing  LICENSE  Makefile  PASSWORD_FIX.md  PASSWORD_ISSUE_SUMMARY.md  README.md  SECURITY_AUDIT.md  SPD-19-COMPLETION-SUMMARY.md  SPD-2-summary.md  SPD-5-COMPLETION-REPORT.md  TEST_SUITE_REPORT.md  check_sp.py  k8s-deployment-container.yaml  k8s-deployment.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_win.txt  specterdefence.db  test.db  test.db-journal  test_cti.py  test_db.py  test_json_cmp.py  test_jsonb.py  test_query.py
.github/workflows/: agent.yml  backend.yml  ci.yml  deploy.yml  docker-build.yml  frontend-ci.yml  frontend.yml  marketing.yml  test.yml
.jules/: sentinel.md
agent/SpecterAgent/: Program.cs  SpecterAgent.csproj
agent/SpecterAgent/Data/: DatabaseContext.cs
agent/SpecterAgent/Models/: AgentConfig.cs  EndpointEvent.cs
agent/SpecterAgent/Services/: EnrollmentService.cs  EventMonitorService.cs  HeartbeatService.cs  TelemetryUploader.cs
docs/: 1-PAGER.md  AI-ARCHITECTURE.md  AI-ROADMAP.md  ARCHITECTURE.md  COMPETITOR-COMPARISON.md  DEPLOYMENT.md  ENDPOINT-AGENT.md  FULL-DOCUMENTATION.md  OFFICE365-PERMISSIONS.md  README.md  SECURE-DEPLOYMENT.md  SECURITY-AUDIT-SUMMARY.md  SECURITY-AUDIT.md  SECURITY-HARDENING-CHECKLIST.md  ai-proposal.md  cronjob-processing-flows.md  endpoint-agent-assessment.md  k8s-security.md  login-processing-flow.md  secret-rotation.md
frontend/: .env.example  .eslintrc.json  .prettierignore  Dockerfile  README.md  STANDARDS.md  TYPESCRIPT_MIGRATION_REPORT.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  test-fixes-plan.md  tsconfig.json  vite.config.ts
frontend/public/: manifest.json  service-worker.js  service-worker.js.disabled
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  service-worker.ts
frontend/src/components/: AlertCard.test.tsx  AlertCard.tsx  AlertFeed.tsx  AnomalyCard.test.tsx  AnomalyCard.tsx  ChangePasswordDialog.test.tsx  ChangePasswordDialog.tsx  FilterPanel.test.tsx  FilterPanel.tsx  Layout.tsx  LoginMap.tsx  LoginTimeline.tsx  MobileAlertCard.tsx  MobileNav.test.tsx  MobileNav.tsx  Navigation.test.tsx  PageHeader.tsx  ProtectedRoute.tsx  Sidebar.test.tsx  Sidebar.tsx  StatsCard.test.tsx  StatsCard.tsx
frontend/src/hooks/: useApi.test.ts  useApi.test.tsx  useApi.ts  useAuth.test.tsx  useAuth.ts  useDashboard.ts  useOffline.ts  useSettings.ts  useWebSocket.ts
frontend/src/pages/: AlertFeed.tsx  Anomalies.tsx  CAPolicies.tsx  Dashboard.test.tsx  Dashboard.tsx  Endpoints.tsx  InsiderThreat.tsx  Login.test.tsx  Login.tsx  LoginAnalytics.tsx  MFAReport.tsx  MailboxRules.tsx  MailboxSecurity.tsx  MapPage.tsx  Monitoring.tsx  OAuthApps.tsx  Settings.tsx  SharePoint.tsx  Tenants.test.tsx  Tenants.tsx  Users.tsx
frontend/src/services/: api.test.ts  api.ts  monitoring.ts
frontend/src/store/: appStore.test.ts  appStore.ts
frontend/src/styles/: mobile.css
frontend/src/test/: index.ts  integration.test.tsx  setup.ts  utils.tsx
frontend/src/types/: analytics.test.ts  index.ts  securityTypes.ts  tenant.test.ts  types.test.ts
helm/: Chart.yaml  README.md  values-k3s.yaml  values.yaml
helm/specterdefence/: Chart.yaml  README.md  values-development.yaml  values-production.yaml  values.yaml
helm/specterdefence/templates/: _helpers.tpl  api-deployment.yaml  api-hpa.yaml  api-service.yaml  configmap-nginx.yaml  configmap.yaml  cronjob-collector.yaml  frontend-deployment.yaml  frontend-hpa.yaml  ingress.yaml  (+8 more)
helm/templates/: _helpers.tpl  cronjob-collector.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
k8s/: README.md  cronjob-monitoring.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  pvc.yaml  service.yaml
k8s/dev/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  service.yaml
k8s/prod/: collector-cronjob.yaml  deployment.yaml  frontend.yaml  ingress.yaml  kustomization.yaml  marketing.yaml  namespace.yaml  security-cronjob.yaml  service.yaml
marketing/: index.html  package-lock.json  package.json
marketing/src/: App.jsx  index.css
scripts/: fix_db_schema.py  fix_tenants.py  fix_tenants_post_secret_loss.py  migrate_to_postgres.py  quick-fix-password.sh  test-local.sh
src/: __init__.py  config.py  database.py  main.py
src/alerts/: __init__.py  discord.py  engine.py  rules.py
src/analytics/: __init__.py  anomalies.py  failed_logins.py  geo_ip.py  insider_threat.py  logins.py  sharepoint.py  threat_intel.py
src/api/: __init__.py  alerts.py  analytics.py  auth.py  auth_local.py  ca_policies.py  dashboard.py  diagnostics.py  dlp.py  endpoints.py  health.py  mailbox.py  mailbox_rules.py  mfa_report.py  oauth_apps.py  settings.py  sharepoint.py  tenants.py  users.py  websocket.py
src/clients/: __init__.py  ca_policies.py  mailbox_rules.py  mfa_report.py  ms_graph.py  oauth_apps.py
src/collector/: __init__.py  main.py  monitoring.py  o365_feed.py  security_scans.py
src/models/: __init__.py  alerts.py  analytics.py  audit_log.py  ca_policies.py  dashboard.py  db.py  dlp.py  endpoint.py  mailbox.py  mailbox_rules.py  mfa_report.py  monitoring.py  oauth_apps.py  settings.py  sharepoint.py  tenant.py  types.py  user.py
src/services/: __init__.py  alert_processor.py  alert_stream.py  ca_policies.py  credential_manager.py  dashboard.py  encryption.py  enhanced_encryption.py  k8s_secrets_storage.py  mailbox_rules.py  mfa_report.py  oauth_apps.py  settings.py  tenant.py
tests/: conftest.py  factories.py
tests/fixtures/: __init__.py
tests/integration/: conftest.py  test_api_flows.py  test_end_to_end.py  test_log_collection.py
tests/unit/: test_anomalies.py  test_database.py  test_encryption.py  test_health_check.py  test_main.py  test_ms_graph.py  test_tenant_api.py  test_tenant_service.py
(+79 files in other folders)
