[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specterdefence"
version = "0.1.0"
description = "Microsoft 365 security posture monitoring and management"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Blue DiGiacomi", email = "blue@digitaladrenalin.net" }
]
keywords = ["security", "microsoft365", "fastapi", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "msal>=1.24.0",
    "cryptography>=41.0.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "faker>=22.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "bandit[toml]>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/bluedigiacomi/specterdefence"
Repository = "https://github.com/bluedigiacomi/specterdefence"

# =============================================================================
# BLACK CONFIGURATION
# =============================================================================
[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | node_modules
  | frontend
)/
'''

# =============================================================================
# RUFF CONFIGURATION - STRICT RULES (ZERO TOLERANCE)
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Strict rule selection - ALL enabled, zero tolerance for violations
select = [
    # Pyflakes - basic Python errors
    "F",
    # pycodestyle - PEP 8 style conventions
    "E",
    "W",
    # isort - import sorting
    "I",
    # pep8-naming - naming conventions
    "N",
    # pyupgrade - modern Python upgrades
    "UP",
    # flake8-bugbear - common bugs and design problems
    "B",
    # flake8-comprehensions - better comprehensions
    "C4",
    # flake8-simplify - code simplification
    "SIM",
    # Security checks (bandit integration)
    "S",
    # McCabe complexity - code complexity limits
    "C90",
    # Pygrep-hooks - various checks
    "PGH",
    # Pylint - additional checks
    "PL",
    # flake8-annotations - type annotation checks
    "ANN",
    # flake8-commas - trailing comma checks
    "COM",
    # flake8-quotes - quote consistency
    "Q",
    # flake8-debugger - debugger statements
    "T10",
    # flake8-print - print statements
    "T20",
    # eradicate - commented-out code
    "ERA",
    # pandas-vet - pandas best practices
    "PD",
    # NumPy-specific rules
    "NPY",
    # flake8-future-annotations - future annotations
    "FA",
]

ignore = [
    # Line too long - handled by black
    "E501",
    # FastAPI dependency pattern uses function calls in defaults
    "B008",
    # Pylint too many arguments - FastAPI dependencies often have many
    "PLR0913",
    # Pylint too many branches - we'll handle complexity separately
    "PLR0912",
    # Pylint too many statements - handled by C90
    "PLR0915",
    # Missing type annotation for self/cls - redundant
    "ANN101",
    "ANN102",
    # Missing return type annotation for special methods - often implicit
    "ANN204",
]

# Strict complexity limits
[tool.ruff.lint.mccabe]
max-complexity = 10  # Maximum cyclomatic complexity

[tool.ruff.lint.pydocstyle]
convention = "google"

# Per-file ignores - tests get some leeway
[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",     # assert statements allowed in tests
    "S105",     # hardcoded passwords allowed in tests
    "S106",     # hardcoded passwords allowed in tests
    "S311",     # random allowed in tests
    "T20",      # print allowed in tests for debugging
    "ANN201",   # missing return type annotation
    "PLR2004",  # magic values allowed in tests
]
"src/**/migrations/**" = [
    "ANN201",   # migration files often don't need annotations
]

# =============================================================================
# MYPY CONFIGURATION - STRICT TYPE CHECKING
# =============================================================================
[tool.mypy]
python_version = "3.11"

# Strict type checking options
disallow_untyped_defs = true          # Require all functions to have type annotations
disallow_incomplete_defs = true       # Require all parameters/returns to be typed
disallow_untyped_calls = false        # Allow calling untyped functions (for external libs)
disallow_untyped_decorators = false   # Allow untyped decorators (FastAPI)
disallow_any_generics = true          # Disallow generic types without type parameters
no_implicit_optional = true           # Require explicit Optional[X]

# Warning options
warn_return_any = true                # Warn when returning Any
warn_unused_configs = true            # Warn about unused mypy config
warn_redundant_casts = true           # Warn about redundant type casts
warn_unused_ignores = true            # Warn about unused # type: ignore comments
warn_no_return = true                 # Warn about missing return statements
warn_unreachable = true               # Warn about unreachable code
warn_incomplete_stub = true           # Warn about incomplete stubs

# Additional strictness
strict_equality = true                # Strict equality checks
strict_concatenate = true             # Strict concatenate checks
extra_checks = true                   # Enable extra checks
show_error_codes = true               # Show error codes in messages
show_column_numbers = true            # Show column numbers in messages

# Import handling
ignore_missing_imports = true         # Ignore missing imports for external libs
follow_imports = "normal"
follow_imports_for_stubs = true

# Module-specific overrides
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false         # Tests can be less strict

# =============================================================================
# PYTEST CONFIGURATION
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

# =============================================================================
# COVERAGE CONFIGURATION
# =============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*",
    "*/.tox/*",
    "*/.eggs/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# =============================================================================
# HATCH CONFIGURATION
# =============================================================================
[tool.hatch.build.targets.wheel]
packages = ["src"]
